banner dates overlapping on druplicon in smaller width screen fixed

--- a/docroot/themes/dcd16/assets/sass/_banner.scss
+++ b/docroot/themes/dcd16/assets/sass/_banner.scss
@@ -98,7 +98,7 @@ body {
       }
       .subtext {
         display: block;
-        font-size: 5em;
+        font-size: 4.5em;
         margin: 0 0 0 8px;
       }
     }
@@ -115,7 +115,15 @@ body {
     }
   }
 }
-
+@media (max-width: 1300px) {
+  .path-frontpage:not(.navbar-fixed) #block-frontbanner {
+    .banner-inner {
+      .subtext {
+        font-size: 4em;
+      }
+    }
+  }
+}
 @media (max-width: 1200px) {
   .path-frontpage:not(.navbar-fixed) #block-frontbanner {
     height: 400px;
